aws/vpc/vpc.tf
resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = {
    "Name"                                  = "terraform-eks"
    "kubernetes.io/cluster/${var.eks_name}" = "shared"
  }
}
